fix: SideBarNavigator container overflow to auto

--- a/src/SideBarNavigator/SideBarNavigator.module.css
+++ b/src/SideBarNavigator/SideBarNavigator.module.css
@@ -13,4 +13,5 @@
     flex:1;
     height:100%;
     z-index:0;
+    overflow:auto;
 }
